Fixed share widgets styles to work on mobile

--- a/css/nurd.less
+++ b/css/nurd.less
@@ -86,9 +86,14 @@ footer { border-top: solid 1px #666; color: #666; font-weight: bold; padding: 12
 }
 
 article {
-    .share-widgets { position: absolute; top: 386px;
+    .share-widgets { background: rgba(255, 255, 255, 0.3); padding: 12px 12px 19px; 
         .share-widget { margin-top: 8px; }
         .share-widget.twitter-share-button-container { margin-top: 15px; }
+    }
+}
+@media screen and (min-device-width: 481px) {
+    article {
+        .share-widgets { border-radius: 0 5px 5px 0; position: fixed; left: 0; top: 20px; }
     }
 }
 
